--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.asti.myapplication">
+    package="com.own.apk.app">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -15,7 +15,7 @@
         >
         <activity
             android:allowBackup="true"
-            android:name="com.example.asti.myapplication.MainActivity"
+            android:name="com.own.apk.app.MainActivity"
             android:label="@string/app_name"
             android:noHistory = "true"
             android:supportsRtl="true">
@@ -25,20 +25,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.asti.myapplication.AlarmActivity"
+            android:name="com.own.apk.app.AlarmActivity"
             android:label="backup process"
             android:theme="@style/AppTheme"
             android:noHistory = "true">
         </activity>
 
-        <receiver android:name="com.example.asti.myapplication.AutoStart">
+        <receiver android:name="com.own.apk.app.AutoStart">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
 
-        <receiver android:name="com.example.asti.myapplication.AlarmRec" >
+        <receiver android:name="com.own.apk.app.AlarmRec" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
